Fix strange width issue causing overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,7 +27,6 @@ body {
 
 html {
 	font-family: "Do Hyeon";
-	font-size: inherit;
 }
 
 
@@ -73,7 +72,6 @@ main {
 	}
 	padding: 0 var(--common-space-lr) 4rem var(--common-space-lr);
 	max-width: 1000px;
-	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 }
